--- a/src/scss/components/_site_navigation.scss
+++ b/src/scss/components/_site_navigation.scss
@@ -79,9 +79,14 @@
             transition: background-color 0.3s ease-in-out;
         }
 
-        &:hover {
-            &::after {
-                background-color: rgba($color: colors.$color__white, $alpha: 50%);
+        // @media (hover: none) {
+        // }
+
+        @media (hover: hover) {
+            &:hover {
+                &::after {
+                    background-color: rgba($color: colors.$color__white, $alpha: 50%);
+                }
             }
         }
 
@@ -162,9 +167,14 @@
                 right: 0;
             }
 
-            &:hover {
-                &::after {
-                    background-color: rgba($color: colors.$color__white, $alpha: 50%);
+            // @media (hover: none) {
+            // }
+
+            @media (hover: hover) {
+                &:hover {
+                    &::after {
+                        background-color: rgba($color: colors.$color__white, $alpha: 50%);
+                    }
                 }
             }
 
